geektime_0-master/devops/5-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project}-${branch} #变量
  namespace: ${myNamespace} #变量
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: ${project}-${branch} #变量
